# Unit-Tested-C-Template

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
src/: main.c
tests/: test.cpp  test_main.c
